@@ -1,13 +1,18 @@
-// https://openjfx.io/openjfx-docs/#gradle
-// def currentOS = org.gradle.internal.os.OperatingSystem.current()
-// def platform
-// if (currentOS.isWindows()) {
-//     platform = 'win'
-// } else if (currentOS.isLinux()) {
-//     platform = 'linux'
-// } else if (currentOS.isMacOsX()) {
-//     platform = 'mac'
-// }
+import org.gradle.internal.SystemProperties
+import org.gradle.util.VersionNumber
+
+
+def currentJvm = SystemProperties.getInstance().getJavaVersion()
+
+if (VersionNumber.parse(currentJvm) > VersionNumber.parse("1.8")) {
+
+    apply plugin: 'org.openjfx.javafxplugin'
+
+    javafx {
+        version = "11.0.2"
+        modules = [ 'javafx.controls' ]
+    }
+}
 
 dependencies {
     compile project(':classpy-common')
@@ -15,26 +20,4 @@ dependencies {
     compile project(':classpy-binarychunk')
     compile project(':classpy-bitcoin')
     compile project(':classpy-wasm')
-
-    // compile "org.openjfx:javafx-base:11:${platform}"
-    // compile "org.openjfx:javafx-graphics:11:${platform}"
-    // compile "org.openjfx:javafx-controls:11:${platform}"
 }
-
-// compileJava {
-//     doFirst {
-//         options.compilerArgs = [
-//                 '--module-path', classpath.asPath,
-//                 '--add-modules', 'javafx.controls'
-//         ]
-//     }
-// }
-//
-//run {
-//    doFirst {
-//        jvmArgs = [
-//                '--module-path', classpath.asPath,
-//                '--add-modules', 'javafx.controls'
-//        ]
-//    }
-//}
